--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -3,7 +3,7 @@
     --label-color: #666;
     --border-color: #818a91;
     --form-error-color: #ff5f3f;
-    --button-primary-color: #5F8DDA;
+    --button-primary-color: #0a4813;
     --button-secondary-color: #666;
     --button-primary-hover-color: #035fe6;
     --form-font-size-m: 22px;
@@ -252,6 +252,14 @@ main .form form .field-wrapper {
     color: var(--form-label-color);
     grid-column: span 12;
 }
+
+main .form form .field-wrapper label {
+Font-weight: 600;
+}
+main .form form .text-wrapper > input {
+border: 1px solid #ff00f2;
+}
+
 
 main .form form p {
     font-size: var(--form-paragraph-font-size);
